# RV32I-Simulator

./: CMakeLists.txt
include/cpu/: alu.h  cpu.h  cpu_core.h
include/decode/: instruction.h  instructions.h
include/memory/: memory.h
include/pipeline/: hazards.h  pipeline.h
include/utils/: defs.h  simulator.h  trace.h
src/: main.c
src/cpu/: core_cpu.c  cpu.c
src/decode/: instruction.c  instructions.c  instructrions.c
src/memory/: memory.c
